--- a/index.html
+++ b/index.html
@@ -51,106 +51,14 @@
 
 	<body>
 		<h1>Dice's World  &nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="updates.html">updates </a></h1>
+		<h2>under construction</h2>
 		<ul>
 			<li class="game-update">
 				<h3>new website update!</h3>
-				<p>welcome to the new site!</p>
+				<p>welcome to the new site! this is the index page..</p>
+				<p>updates at the top for the update section</p>
 			</li>
-			<li class="game-update">
-				<h3>Update #2</h3>
-				<p>
-					<p>"oOo an dev update!"</p>
-
-
-					<p>"what does that mean."</p>
-
-					<p>"its a way to provide infomation with out images or videos."</p>
-
-
-					<p>"oh, thats dumb."</p>
-
-
-					<p>welcome to dev update 1.</p>
-
-					<p>i'm just gonna talk about upcoming features for V8.</p>
-
-
-					<p>more levels, ways to share your creations.</p>
-					<p>new blocks, fixed jumping. added flying.</p>
-					<p>fixed getting stuck in walls.</p>
-					<p>new GUI. support for Discord RPC.</p>
-
-					<img  src="https://dicesworld.files.wordpress.com/2019/04/discordrpc.png" alt="DiscordRPC" width="800" height="126" />
-
-					<p>V8 is looking great.
-
-					<p>multiplayer is still not in though.</p>
-
-				</p>
-			</li>
-			<li class="game-update">
-				<h3>Dev Update – Version V8 – Teaser 3</h3>
-				<p>
-					<img style="color:var(--color-neutral-600);" src="https://dicesworld.files.wordpress.com/2019/04/fuck.png" alt="fuck" width="1000" height="720" />
-					<img style="color:var(--color-neutral-600);" src="https://dicesworld.files.wordpress.com/2019/04/new-log.png" alt="New Log" width="1418" height="770" />
-					<img style="color:var(--color-neutral-600);" src="https://dicesworld.files.wordpress.com/2019/04/hammericon.png" alt="HammerIcon" width="200" height="365" />
-					<img  style="color:var(--color-neutral-600);" src="https://dicesworld.files.wordpress.com/2019/04/face2.png" alt="face2" width="200" height="128" />
-					<p>With the release of V8, I got burned out and still am, with no creative ideas. I changed the logo. and I have a personal website. <a href="https://dicespage.wordpress.com/">Dice's webpage</a></p>
-				</p>
-			</li>
-			<li class="game-update">
-				<h3>Dev Update – Version V8 – Teaser 2</h3>
-				<p>
-					<img class="alignnone size-full wp-image-94" src="https://dicesworld.files.wordpress.com/2019/03/v8-teaser.jpg" alt="v8-Teaser" width="713" height="713" />
-					<p>More mental breaks, and side projects to refresh my mind. but here's what I've done on the side</p>
-				</p>
-			</li>
-			<li class="game-update">
-				<h3>Dev Update - Version V8 - Teaser 1</h3>
-				<p>
-					<img class="alignnone size-full wp-image-79 aligncenter" src="https://dicesworld.files.wordpress.com/2019/03/teaser-for-v8-t1.png" alt="teaser-for v8-t1" width="1256" height="1054" />
-					<p>I took a break from development after <strong>dev build v7</strong>, and so after a 2 week long break, I'm back. I hope you enjoy the first Teaser for V8</p>
-				</p>
-			</li>
-			<li class="game-update">
-				<h3>Dice&#039;s World - Dev Build V7 RELEASE</h3>
-				<p>
-					<p>Dice's World, Dev Build V7 has now been released!!</p>
-					<p>Available for Windows Only</p>
-					<p>Changelog in zip</p>
-					<p><a href="http://www.mediafire.com/file/11ci7ql8yu8bvn9/Dice%2527s_World_Dev_V7.zip/file">DOWNLOAD</a></p>
-					<p><a href="https://drive.google.com/file/d/1DFAhBXbw74tWZGD-7U7F64pP-aIF-ZvP/view?usp=drivesdk">DOWNLOAD VIA GOOGLE DRIVE</a></p>
-					INPUT RELEASE PICTURE!
-					<p><img src="https://dicesblog.files.wordpress.com/2019/02/releasepic.png" alt="ReleasePic" width="1140" height="1080"></p>
-				</p>
-			</li>
-			<li class="game-update">
-				<h3>Dev Update - Version V7 - Teaser 3</h3>
-				<p>
-					<img src="https://dicesworld.files.wordpress.com/2019/02/cropped-logo.png" width="512" height="512" />
-					<p>new logo</p>
-				</p>
-			</li>
-			<li class="game-update">
-				<h3>Dev Update - Version V7 - Teaser 2</h3>
-				<p>
-					<img class="alignnone size-full wp-image-55" src="https://dicesworld.files.wordpress.com/2019/02/teaser-for-clouds-8d.png" alt="teaser-for-clouds-8D" width="1140" height="1080" />
-					<p>oh and there's music btw</p>
-				</p>
-			</li>
-			<li class="game-update">
-				<h3>Dev Update - Version V7 - Teaser 1</h3>
-				<p>
-					<img class="alignnone size-full wp-image-51" src="https://dicesworld.files.wordpress.com/2019/02/teaser-for-dark-level-8d-1.png" alt="teaser-for-dark-level-8D" width="1184" height="1080" />
-				</p>
-			</li>
-			<li class="game-update">
-				<h3>new game by the name of Dice&#039;s World</h3>
-				<p>
-					<img class="alignnone size-full wp-image-45 aligncenter" src="https://dicesworld.files.wordpress.com/2019/02/build6.0screenshot.png" alt="build6.0screenshot" 	width="772" height="668" />
-					<p>a whole new graphical change!</p>
-				</p>
-			</li>
+			
 		</ul>
 	</body>
 </html>
