--- a/updates.html
+++ b/updates.html
@@ -50,14 +50,14 @@
 	</style>
 
 	<body>
-		<h1>Dice's World Updates &nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="index.html">main page</a></h1>
+		<h1><a style="color: white;" href="index.html">Dice's World</a> Updates &nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="index.html">main page</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="download.html">download</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="about.html">about</a></h1>
 		<ul>
 			<li class="game-update">
 				<h3>new website update!</h3>
 				<p>welcome to the new site!</p>
 			</li>
 			<li class="game-update">
-				<h3>Update #2</h3>
+				<h3>dev update 1 – version V8 </h3>
 				<p>
 					<p>"oOo an dev update!"</p>
 
