--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Dice's World - Main Page</title>
+		<title>Dice's World - About</title>
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400" rel="stylesheet"> 
 	</head>
 	<style type="text/css">
@@ -50,15 +50,21 @@
 	</style>
 
 	<body>
-		<h1><a style="color: white;" href="index.html">Dice's World</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="updates.html">updates</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="download.html">download</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="about.html">about</a></h1>
-		<h2>under construction</h2>
+		<h1>About <a style="color: white;" href="index.html">Dice's World</a> &nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="index.html">main page</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="updates.html">updates</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="download.html">downloads</a></h1>
 		<ul>
 			<li class="game-update">
-				<h3>new website update!</h3>
-				<p>welcome to the new site! this is the index page..</p>
-				<p>updates at the top for the update section</p>
+				<h3>about</h3>
+				<p>
+					<h4>who made this?</h4>
+
+					<p>&nbsp&nbspWell, if you haven't figured it out, Dice.</p>
+
+					<h4>why?</h4>
+
+					<p>&nbsp&nbspoh, as a small hobby project, so don’t expect it to be big.</p>
+
+				</p>
 			</li>
-			
 		</ul>
 	</body>
 </html>
