--- a/download.html
+++ b/download.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Dice's World - Main Page</title>
+		<title>Dice's World - Download</title>
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400" rel="stylesheet"> 
 	</head>
 	<style type="text/css">
@@ -50,15 +50,22 @@
 	</style>
 
 	<body>
-		<h1><a style="color: white;" href="index.html">Dice's World</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="updates.html">updates</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="download.html">download</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="about.html">about</a></h1>
-		<h2>under construction</h2>
+		<h1><a style="color: white;" href="index.html">Dice's World</a> Download Page &nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="index.html">main page</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="updates.html">updates</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="about.html">about</a></h1>
 		<ul>
 			<li class="game-update">
-				<h3>new website update!</h3>
-				<p>welcome to the new site! this is the index page..</p>
-				<p>updates at the top for the update section</p>
+				<h3>about</h3>
+				<p>
+					<h4>version 8 pre-release:</h4>
+
+					<p><a href="https://drive.google.com/file/d/1Q4f7DOB3PSLh8Ghgvz-V3wAZiVu21deV/view?usp=sharing">google drive</a></p>
+
+					<h4>version 7:</h4>
+
+					<p><a href="https://drive.google.com/file/d/1DFAhBXbw74tWZGD-7U7F64pP-aIF-ZvP/view?usp=drivesdk">google drive</a></p>
+
+					<p><a href="http://www.mediafire.com/file/11ci7ql8yu8bvn9/Dice%2527s_World_Dev_V7.zip/file">mediafire</a></p>
+				</p>
 			</li>
-			
 		</ul>
 	</body>
 </html>
