--- a/download.html
+++ b/download.html
@@ -53,7 +53,7 @@
 		<h1><a style="color: white;" href="index.html">Dice's World</a> Download Page &nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="index.html">main page</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="updates.html">updates</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="about.html">about</a></h1>
 		<ul>
 			<li class="game-update">
-				<h3>about</h3>
+				<h3>downloads</h3>
 				<p>
 					<h4>version 8 pre-release:</h4>
 
