--- a/updates.html
+++ b/updates.html
@@ -52,6 +52,14 @@
 	<body>
 		<h1><a style="color: white;" href="index.html">Dice's World</a> Updates &nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="index.html">main page</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="download.html">download</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="about.html">about</a></h1>
 		<ul>
+			
+			<li class="game-update">
+				<h3>Dice's World Background</h3>
+				<p>We had some requests to make background. So enjoy!</p>
+				<p><img src="img/Dices-World-Wallpaper.png"></p>
+			</li>
+			
+			
 			<li class="game-update">
 				<h3>new website update!</h3>
 				<p>welcome to the new site!</p>
