--- a/updates.html
+++ b/updates.html
@@ -129,7 +129,7 @@
 					<p><a href="http://www.mediafire.com/file/11ci7ql8yu8bvn9/Dice%2527s_World_Dev_V7.zip/file">DOWNLOAD</a></p>
 					<p><a href="https://drive.google.com/file/d/1DFAhBXbw74tWZGD-7U7F64pP-aIF-ZvP/view?usp=drivesdk">DOWNLOAD VIA GOOGLE DRIVE</a></p>
 					INPUT RELEASE PICTURE!
-					<p><img src="https://dicesblog.files.wordpress.com/2019/02/releasepic.png" alt="ReleasePic" width="1140" height="1080"></p>
+					<p><img src="img/ReleasePic.png" alt="ReleasePic" width="1140" height="1080"></p>
 				</p>
 			</li>
 			<li class="game-update">
