--- a/updates.html
+++ b/updates.html
@@ -62,7 +62,7 @@
 			
 			<li class="game-update">
 				<h3>new website update!</h3>
-				<p>welcome to the new site!</p>
+				<p>Welcome to the new site!</p>
 			</li>
 			<li class="game-update">
 				<h3>dev update 1 – version V8 </h3>
