--- a/index.html
+++ b/index.html
@@ -51,12 +51,19 @@
 
 	<body>
 		<h1><a style="color: white;" href="index.html">Dice's World</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="updates.html">updates</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="download.html">download</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="about.html">about</a></h1>
-		<h2>under construction</h2>
+		<h2>Welcome!</h2>
 		<ul>
 			<li class="game-update">
-				<h3>new website update!</h3>
-				<p>welcome to the new site! this is the index page..</p>
-				<p>updates at the top for the update section</p>
+				<h3>Next Game Version</h3>
+				<p>Alpha 0.5</p>
+			</li>
+			<li class="game-update">
+				<h3>Current Game Version</h3>
+				<p>Alpha 0.1</p>
+			</li>
+			<li class="game-update">
+				<h3>Past Game Versions</h3>
+				<p>Dev 6, Dev 7, Dev 8</p>
 			</li>
 			
 		</ul>
