--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
 		<h2>Welcome!</h2>
 		<ul>
 			<li class="game-update">
-				<h3>Next Game Version</h3>
+				<h3>⦿Next Game Version</h3>
 				<p>Alpha 0.5</p>
 			</li>
 			<li class="game-update">
-				<h3>Current Game Version</h3>
+				<h3>•Current Game Version</h3>
 				<p>Alpha 0.1</p>
 			</li>
 			<li class="game-update">
-				<h3>Past Game Versions</h3>
+				<h3>◦Past Game Versions</h3>
 				<p>Dev 6, Dev 7, Dev 8</p>
 			</li>
 			
