--- a/updates.html
+++ b/updates.html
@@ -61,11 +61,11 @@
 			<li class="game-update">
 				<h3>New Version Naming</h3>
 				<p>From "Dev #", the game is now alpha.</p>
-				<p> </p>
+				<p>&nbsp</p>
 				<p>Talking about versions, we have gotten alot of questions involing them so lets answer 2 for now</p>
-				<p> </p>
+				<p>&nbsp</p>
 				<p>"People have asked why we use 'Dev #'". "Dev" stands for development build, and reason our numbering</p>
-				<p> </p>
+				<p>&nbsp</p>
 				<p>"What's with the numbering?? It starts at 6". Because versions 1-5 are real, and do exist</p>
 				<p>They're the early test versions of this game. 6 just happen to be the first public version</p>
 			</li>
