--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<h2>Welcome!</h2>
 		<ul>
 			<li class="game-update">
-				<h3>⦿Next Game Version</h3>
+				<h3>⁃Next Game Version</h3>
 				<p>Alpha 0.5</p>
 			</li>
 			<li class="game-update">
