--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 				<p>
 					<h4>who made this?</h4>
 
-					<p>&nbsp&nbspWell, if you haven't figured it out, Dice.</p>
+					<p>&nbsp&nbspWell, if you haven't figured it out, <a style="color: white;" href="index.html">Dice</a>.</p>
 
 					<h4>why?</h4>
 
