--- a/personal.html
+++ b/personal.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Dice's projects/title>
+		<title>Dice's projects</title>
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400" rel="stylesheet"> 
 	</head>
 	<style type="text/css">
@@ -50,7 +50,7 @@
 	</style>
 
 	<body>
-		<h1>Dice's projects&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="updates.html">return</a></h1>
+		<h1>Dice's projects&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="about.html">return</a></h1>
 		<h2>Welcome!</h2>
 		<ul>
 			woah you the the secret dice's project page..
