--- a/personal.html
+++ b/personal.html
@@ -56,7 +56,7 @@
 			woah you the the secret dice's project page..
 			<p> well while your here check out my project down below </p>
 			<li class="game-update">
-				<h3>⁃FPS Test/h3>
+				<h3>⁃FPS Test </h3>
 				<p>My first game in the unreal engine.. kinda good</p>
 				<p><a href="google drive link"> Download </a></p>
 			</li>
