--- a/updates.html
+++ b/updates.html
@@ -52,6 +52,14 @@
 	<body>
 		<h1><a style="color: white;" href="index.html">Dice's World</a> Updates &nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="index.html">main page</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="download.html">download</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="about.html">about</a></h1>
 		<ul>
+			<li class="game-update">
+				<h3>New's on the new version</h3>
+				<p>New features have already been finalized and we are currently</p>
+				<p> ironing out a few bugs. Just in time for christmas!</p>
+				<p>  </p>
+				<p> no it isn't a christmas update.</p>
+				<p>STAY TUNED!!</p>
+			</li>
 			
 			<li class="game-update">
 				<h3>Dice's World Background</h3>
