--- a/download.html
+++ b/download.html
@@ -52,20 +52,24 @@
 	<body>
 		<h1><a style="color: white;" href="index.html">Dice's World</a> Download Page &nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="index.html">main page</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="updates.html">updates</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="about.html">about</a></h1>
 		<ul>
+			<h3>downloads</h3>
 			<li class="game-update">
-				<h3>downloads</h3>
+				<h3>version 8 pre-release:</h3>
 				<p>
-					<h4>version 8 pre-release:</h4>
-
 					<p><a href="https://drive.google.com/file/d/1Q4f7DOB3PSLh8Ghgvz-V3wAZiVu21deV/view?usp=sharing">google drive</a></p>
-
+				</p>
+			</li>
+	
+			<li class="game-update">
+				<h3>version 7:</h3>
+				<p>
 					<h4>version 7:</h4>
 
 					<p><a href="https://drive.google.com/file/d/1DFAhBXbw74tWZGD-7U7F64pP-aIF-ZvP/view?usp=drivesdk">google drive</a></p>
 
 					<p><a href="http://www.mediafire.com/file/11ci7ql8yu8bvn9/Dice%2527s_World_Dev_V7.zip/file">mediafire</a></p>
 				</p>
-			</li>
+			</li> 
 		</ul>
 	</body>
 </html>
