--- a/updates.html
+++ b/updates.html
@@ -32,6 +32,13 @@
 			font-weight: 300;
 			font-variant: small-caps;
 		}
+		
+		h2{
+			font-size: 1.5em;
+			color:white;
+			font-weight: 300;
+			font-variant: small-caps;
+		}
 
 		h1{
 			font-weight: 300;
@@ -55,10 +62,11 @@
 			<li class="game-update">
 				<h3>New's on the new version</h3>
 				<p>New features have already been finalized and we are currently</p>
-				<p> ironing out a few bugs. Just in time for christmas!</p>
-				<p>  </p>
+				<p> &nbsp;ironing out a few bugs. Just in time for christmas!</p>
+				<p>&nbsp;</p>
 				<p> no it isn't a christmas update.</p>
-				<p>STAY TUNED!!</p>
+				<p>&nbsp;</p>
+				<h2>STAY TUNED!!</h2>
 			</li>
 			
 			<li class="game-update">
