--- a/download.html
+++ b/download.html
@@ -54,7 +54,7 @@
 		<ul>
 			<h3>downloads</h3>
 			<li class="game-update">
-				<h3>version 9 pre-release:</h3>
+				<h3>Alpha 1.0:</h3>
 				<p>
 					<p>Coming soon!</p>
 				</p>
