--- a/download.html
+++ b/download.html
@@ -56,7 +56,14 @@
 			<li class="game-update">
 				<h3>Alpha 1.0:</h3>
 				<p>
-					<p>Coming soon!</p>
+				
+					<p><a href="https://drive.google.com/file/d/1fmj9SIKrmAWPtz6fT00iTZSJgvDXZ6V8/view?usp=sharing">(Setup) google drive</a></p>
+					<p><a href="http://www.mediafire.com/file/jmqvpelh2yjxzi3/DiceWorldSetup.exe/file">(Setup) mediafire</a></p>
+					<p> &nbsp </p>
+					<p><a href="https://drive.google.com/file/d/1IQ3i4VNzwf0rnyR4K3oSIhhy7jCV2rs_/view?usp=sharing">(Archive) google drive</a></p>
+					<p><a href="http://www.mediafire.com/file/c0ux70zqn1x9rvp/Alpha_1.0.zip/file">(Archive) mediafire</a></p>
+
+					
 				</p>
 			</li>
 			
