--- a/updates.html
+++ b/updates.html
@@ -60,6 +60,21 @@
 		<h1><a style="color: white;" href="index.html">Dice's World</a> Updates &nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="index.html">main page</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="download.html">download</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="about.html">about</a></h1>
 		<ul>
 			<li class="game-update">
+				<h3>Alpha 1.0 realsce</h3>
+				<p>Go to <a href="download.html">downloads</a> to download the game</p>
+				<p>Also the game in on itch.io</p>
+				<p>Thanks for Playing!</p>
+				<p>&nbsp;</p>
+				<p>&nbsp;</p>
+				<p>
+					<iframe frameborder="0" src="https://itch.io/embed/436681?dark=true" width="552" height="167">
+						<a href="https://randomdice.itch.io/dicesworld">Dice's World</a></iframe>
+				</p>
+			</li>
+			
+			
+			
+			<li class="game-update">
 				<h3>New's on the new version</h3>
 				<p>New features have already been finalized and we are currently</p>
 				<p> &nbsp;ironing out a few bugs. Just in time for christmas!</p>
