--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
 		<ul>
 			<li class="game-update">
 				<h3>⁃Next Game Version</h3>
-				<p>Alpha 1.0</p>
+				<p>Alpha 2.0</p>
 			</li>
 			<li class="game-update">
 				<h3>•Current Game Version</h3>
-				<p>Dev 8</p>
+				<p>Alpha 1.0</p>
 			</li>
 			<li class="game-update">
 				<h3>◦Past Game Versions</h3>
-				<p>Dev 6, Dev 7</p>
+				<p>Dev 6, Dev 7, Dev 8</p>
 			</li>
 			
 		</ul>
