--- a/updates.html
+++ b/updates.html
@@ -62,7 +62,7 @@
 			<li class="game-update">
 				<h3>Alpha 1.0 realsce</h3>
 				<p>Go to <a href="download.html">downloads</a> to download the game</p>
-				<p>Also the game in on itch.io</p>
+				<p>Also the game is on itch.io!</p>
 				<p>Thanks for Playing!</p>
 				<p>&nbsp;</p>
 				<p>&nbsp;</p>
