Death of Dice's World

--- a/download.html
+++ b/download.html
@@ -4,6 +4,24 @@
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400" rel="stylesheet"> 
 	</head>
 	<style type="text/css">
+
+		#banner { 
+		    position: absolute; 
+		    width: 800px; 
+		    top: 0%; 
+		    transform: translateY(-50%);
+		    align-items: center;
+			position: relative;
+		    background-color: #E99A2C; 
+		    z-index: 1000;
+		}
+		#banner-content { 
+		    width: 800px; 
+		    margin: 20 auto; 
+		    padding: 12px; 
+		    border: 1px solid #000;
+		}
+		
 		* {
 			box-sizing: border-box;
 		}
@@ -48,6 +66,14 @@
 		}
 		
 	</style>
+
+	<center>
+	<div id="banner">
+        <div id="banner-content">
+            Dice's World has ended development. Please do not expect anymore updates. Thank you for playing.
+        </div>
+    </div>
+    </center>
 
 	<body>
 		<h1><a style="color: white;" href="index.html">Dice's World</a> Download Page &nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="index.html">main page</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="updates.html">updates</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="about.html">about</a></h1>
