--- a/index.html
+++ b/index.html
@@ -4,6 +4,25 @@
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400" rel="stylesheet"> 
 	</head>
 	<style type="text/css">
+
+		#banner { 
+		    position: absolute; 
+		    width: 800px; 
+		    top: 0%; 
+		    transform: translateY(-50%);
+		    align-items: center;
+			position: relative;
+		    background-color: #E99A2C; 
+		    z-index: 1000;
+		}
+		#banner-content { 
+		    width: 800px; 
+		    margin: 20 auto; 
+		    padding: 12px; 
+		    border: 1px solid #000;
+		}
+
+
 		* {
 			box-sizing: border-box;
 		}
@@ -49,14 +68,18 @@
 		
 	</style>
 
+	<center>
+	<div id="banner">
+        <div id="banner-content">
+            Dice's World has ended development. Please do not expect anymore updates. Thank you for playing.
+        </div>
+    </div>
+    </center>
+
 	<body>
 		<h1><a style="color: white;" href="index.html">Dice's World</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="updates.html">updates</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="download.html">download</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="about.html">about</a></h1>
 		<h2>Welcome!</h2>
 		<ul>
-			<li class="game-update">
-				<h3>⁃Next Game Version</h3>
-				<p>Alpha 2.0</p>
-			</li>
 			<li class="game-update">
 				<h3>•Current Game Version</h3>
 				<p>Alpha 1.0</p>
