--- a/updates.html
+++ b/updates.html
@@ -4,6 +4,24 @@
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400" rel="stylesheet"> 
 	</head>
 	<style type="text/css">
+
+		#banner { 
+		    position: absolute; 
+		    width: 800px; 
+		    top: 0%; 
+		    transform: translateY(-50%);
+		    align-items: center;
+			position: relative;
+		    background-color: #E99A2C; 
+		    z-index: 1000;
+		}
+		#banner-content { 
+		    width: 800px; 
+		    margin: 20 auto; 
+		    padding: 12px; 
+		    border: 1px solid #000;
+		}
+		
 		* {
 			box-sizing: border-box;
 		}
@@ -56,11 +74,25 @@
 		
 	</style>
 
+	<center>
+	<div id="banner">
+        <div id="banner-content">
+            Dice's World has ended development. Please do not expect anymore updates. Thank you for playing.
+        </div>
+    </div>
+    </center>
+
 	<body>
 		<h1><a style="color: white;" href="index.html">Dice's World</a> Updates &nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="index.html">main page</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="download.html">download</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="about.html">about</a></h1>
 		<ul>
 			<li class="game-update">
-				<h3>Alpha 1.0 realsce</h3>
+				<h3>End of Dice's World</h3>
+				<p>Dice here, I've been working on Dice's world for almost a year and a half, it's been a fun ride. </p><p> I've decided to move on to future endovors. <a href="https://github.com/DiceRandom">Here</a> you can find my github and future projects, and the Dice's World source code <a href="https://github.com/DiceRandom/s">here</a>. </p><p>Thanks for Playing! 👋</p>
+				</p>
+			</li>
+
+			<li class="game-update">
+				<h3>Alpha 1.0 release!</h3>
 				<p>Go to <a href="download.html">downloads</a> to download the game</p>
 				<p>Also the game is on itch.io!</p>
 				<p>Thanks for Playing!</p>
