--- a/about.html
+++ b/about.html
@@ -4,6 +4,24 @@
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400" rel="stylesheet"> 
 	</head>
 	<style type="text/css">
+
+		#banner { 
+		    position: absolute; 
+		    width: 800px; 
+		    top: 0%; 
+		    transform: translateY(-50%);
+		    align-items: center;
+			position: relative;
+		    background-color: #E99A2C; 
+		    z-index: 1000;
+		}
+		#banner-content { 
+		    width: 800px; 
+		    margin: 20 auto; 
+		    padding: 12px; 
+		    border: 1px solid #000;
+		}
+
 		* {
 			box-sizing: border-box;
 		}
@@ -49,6 +67,14 @@
 		
 	</style>
 
+	<center>
+	<div id="banner">
+        <div id="banner-content">
+            Dice's World has ended development. Please do not expect anymore updates. Thank you for playing.
+        </div>
+    </div>
+    </center>
+
 	<body>
 		<h1>About <a style="color: white;" href="index.html">Dice's World</a> &nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="index.html">main page</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="updates.html">updates</a>&nbsp&nbsp&nbsp&nbsp&nbsp <a style="font-size: 25px;" href="download.html">downloads</a></h1>
 		<ul>
@@ -57,11 +83,16 @@
 				<p>
 					<h4>who made this?</h4>
 
-					<p>&nbsp&nbspWell, if you haven't figured it out, <a style="color: white;" href="personal.html">Dice</a>.</p>
+					<p>&nbsp&nbspWell, if you haven't figured it out, Dice A.</p>
 
 					<h4>why?</h4>
 
-					<p>&nbsp&nbspoh, as a small hobby project, so don’t expect it to be big.</p>
+					<p>&nbsp&nbspDue to boredom.</p>
+
+					<h4>Dice's Social Media</h4>
+					<a href="https://twitter.com/Random_Dice">Twitter</a>
+					<a href="https://www.youtube.com/channel/UCAIO4RQfM1ZC1X3lrE6ZzwQ">Youtube</a>
+					<a href="https://dicerandom.github.io/">My Site</a>
 
 				</p>
 			</li>
