--- a/updates.html
+++ b/updates.html
@@ -7,7 +7,7 @@
 
 		#banner { 
 		    position: absolute; 
-		    width: 800px; 
+		    width: 100%; 
 		    top: 0%; 
 		    transform: translateY(-50%);
 		    align-items: center;
