--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta property="og:locale" content="en_US" />
     <link rel="canonical" href="https://dicerandom.github.io/DicesWorldWebpage" />
     <meta property="og:url" content="https://dicerandom.github.io/DicesWorldWebpage" />
-    <meta property="og:image" content="logo.png" />
-    <meta property="og:site_name" content="dices world"/>
+    <meta property="og:image" content="https://dicerandom.github.io/DicesWorldWebpage/logo.png" />
+    <meta name="og:description" content="Dice's world is in development">
     <script type="application/ld+json">
     {"url":"https://dicerandom.github.io/DicesWorldWebpage","@type":"WebSite","headline":"dices world","description":"","name":"dices world","@context":"https://schema.org"}</script>
     <!-- End Jekyll SEO tag -->
