--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="canonical" href="https://dicerandom.github.io/DicesWorldWebpage" />
 
     <meta property="og:url" content="https://dicerandom.github.io/DicesWorldWebpage" />
-    <meta property="og:image" content="https://dicerandom.github.io/DicesWorldWebpage/logo.png" />
+    <meta property="og:image" content="logo.png" />
     <meta name="og:description" content="Dice's world is in development">
 </head>
 
