--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <header class="header">
         <div class="container">
             <a href="./" class="header-brand">
+                
                 dices world
             </a>
             <div class="header-navigation">
@@ -33,7 +34,7 @@
     <div class="container">
         <div class="body">
             <h1 class="title text-white">Dice's World is currently being remade..</h1>
-            <h2 class="subtitle text-white">The plan is to release it this christmas. You'll find updates on here soon.</h2>
+            <h2 class="subtitle text-white">Join the <a href="https://discord.gg/dwRq9CyPdF">discord</a> for previews!</h2>
         </div>
     </div>
 </div>
