--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container">
         <div class="body">
             <h1 class="title text-white">Dice's World is currently being remade..</h1>
-            <h2 class="subtitle text-white">Join the <a href="https://discord.gg/dwRq9CyPdF">discord</a> for previews!</h2>
+            <h2 class="subtitle text-white">Join the <s><a href="">discord</a></s> for previews!</h2>
         </div>
     </div>
 </div>
